# optimal-quoting

./: README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: frontier.yaml  mm_toy.yaml  probing.yaml
docs/: ROADMAP.md
scripts/: calibrate_intensity.py  run_benchmark.py  run_frontier.py  run_probing_experiment.py  run_stress.py
src/optimal_quoting/: config.py  log_utils.py  types.py
src/optimal_quoting/backtest/: engine.py
src/optimal_quoting/calibration/: diagnostics.py  mle.py
src/optimal_quoting/experiments/: probing_frontier.py
src/optimal_quoting/features/: microstructure.py
src/optimal_quoting/model/: avellaneda_stoikov.py
src/optimal_quoting/sim/: poisson.py
src/optimal_quoting/strategy/: probing.py  quotes.py
tests/: test_avellaneda_stoikov.py  test_calibration_mle.py  test_diagnostics.py  test_engine_toy.py  test_metrics_performance.py  test_probing_quotes.py
