[project]
name = "optimal-quoting"
version = "0.1.0"
description = "Stochastic control approach to optimal market making and quoting"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "matplotlib",
]

[tool.ruff]
line-length = 100
target-version = "py310"
fix = true

[tool.pytest.ini_options]
testpaths = ["tests"]
